--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <header><img src ="logo.jpg" alt="logo" alt="logo"  style="height: 180px;width: 180px;"><span></SPAN>SREE GROCERY</header> 
 
 <link rel="stylesheet" href="style.css">
